WIP notebook refactoring

--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -35,9 +35,9 @@ from datetime import datetime
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
+from src.inference.collision_models import BornLogPeak, ScreenedBorn
 from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
-from src.utilities import AtomicUnits, elec_loss_fn
+from src.utilities import AtomicUnits, elec_loss_fn, kramerskronig, kramerskronig_arr
 import src.inference.probability_models as prob
 
 import warnings
@@ -57,28 +57,28 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
-# chemical potential
-cp = 0.3212 # [at u]
+# charge state
+Z = 3
 
-datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-orig_freq_data = datadump[0] # [eV]
-print(f"length of original data = {len(orig_freq_data)}")
-AA_collfreq_data = datadump[1] + 1j * datadump[2]
-dos_data = datadump[3]
+# datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6], unpack=True)
+# orig_freq_data = datadump[0] # [eV]
+# print(f"length of original data = {len(orig_freq_data)}")
+# AA_collfreq_data = datadump[1] + 1j * datadump[2]
 
-# function for Average Atom collision freq
-true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
+# # function for Average Atom collision freq
+# true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 
 # electron data
-electrons = ElectronGas(t, d, dos_fn, cp)
+electrons = ElectronGas(t, d)
 
 # dielectric function
 dielectric = Mermin(electrons)
 
+# Born collision frequency
+true_collfreq_fn = ScreenedBorn(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
+
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 300) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -87,13 +87,7 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-def collisionfreq(freq, params):
-    # real part
-    recollision = collision_activate_decay(freq, *params)
-    # imaginary part
-    imcollision = collision_activate_decay_imag(freq, *params)
-
-    return recollision + 1j * imcollision
+collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
 ```
 
 # Define the ELF model
@@ -101,8 +95,6 @@ def collisionfreq(freq, params):
 using the Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
-dielectric = Mermin(ElectronGas(t, d, dos_fn))
-
 def elfmodel(freq, params):
     return elec_loss_fn(
         dielectric,
@@ -112,26 +104,29 @@ def elfmodel(freq, params):
         )
 ```
 
+```{code-cell} ipython3
+x = np.geomspace(1e-3, 1e1, 300)
+q = 0.5
+plt.loglog(x, true_collfreq_fn._RPAimag(q, x) / x, label=r"RPA.imag / $\omega$")
+plt.axhline(2 / q**3 / (1 + np.exp((q**2/8 - electrons.chemicalpot) / electrons.temperature)), c="r", ls="--", label=r"lim RPA.imag / $\omega$")
+plt.plot(x, 1 / x / (1 + np.exp((x**2/8 - electrons.chemicalpot) / electrons.temperature)), label="lim q-integrand")
+plt.plot(x, 1/x, ls="-.", label="1/x")
+plt.ylim(1e-4, 1e4)
+plt.legend()
+```
+
 ### Create ELF data with the average-atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elec_loss_fn(dielectric,
-                        wavenum * AtomicUnits.length,
-                        freq_data / AtomicUnits.energy,
-                        true_collfreq_fn
-                    )
+elf_data = elec_loss_fn(
+    dielectric,
+    wavenum * AtomicUnits.length,
+    freq_data / AtomicUnits.energy,
+    true_collfreq_fn
+)
+
 print(f"shape of ELF data = {elf_data.shape}")
-```
-
-### plot the collision freq data
-
-```{code-cell} ipython3
-plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
-plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision freq [au]")
-plt.legend()
 ```
 
 # Define residual function
@@ -146,10 +141,10 @@ def residual(params):
     )
 
 # initial parameter guesses
-initparams = (1, 1, 1, 1)
+initparams = (1, 1e-6, 1, 1, 1)
 
 # optimization results
-optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
+optresult = optimize.least_squares(residual, initparams, bounds=(1e-6, np.inf), max_nfev=150)
 ```
 
 ```{code-cell} ipython3
@@ -158,22 +153,28 @@ optresult
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.loglog(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
 plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
-# optimized
-plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="indirect opt.")
 plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+# direct optimized
+# write real part in form acceptable by scipy.optimize.curve_fit
+def collisionfreqreal(x, p0, p1, p2, p3, p4):
+    return collisionfreq.real(x, (p0, p1, p2, p3, p4))
+popt_2, _ = optimize.curve_fit(collisionfreqreal, freq_data / AtomicUnits.energy, true_collfreq_fn(freq_data / AtomicUnits.energy).real, p0=(1, 1e-6, 1e-6, 1e-6, 1e-6), bounds=(0, np.inf))
+plt.plot(freq_data, collisionfreqreal(freq_data / AtomicUnits.energy, *popt_2), label="direct opt.", ls="-.", c="C1")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
+plt.plot(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
+plt.xlim(0, 45)
 plt.ylim(1e-6) # resolution of data
 plt.legend()
 ```
@@ -187,8 +188,9 @@ lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 100],
-    [0, 100]
+    [0, 20],
+    [0, 50],
+    [0, 8]
 ]
 
 logprior = prob.UniformLogPrior(prior_lims)
@@ -208,30 +210,33 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "relative residual"
+samplesfile = "../../data/mcmc/mcmc_born_collisions"
+dataset = f"relative residual - q = {wavenum} - alt. param. ranges"
 ```
 
 ```{code-cell} ipython3
+# datainfo = f"""Data generated using Average Atom 
+#          collisions [T-matrix cross sections, nonideal DOS, QOZ structure
+#          factors, LB form, inelastic processes], from file {datafile}."""
+datainfo = f"""Data from Born collision frequency theory with electron-ion
+         screening
+         """
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using Average Atom 
-         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
-         Kramers-Kronig transform for imaginary part of collision freq.""",
+    "input data info" : datainfo ,
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
     "frequency grid [eV]" : freq_data,
-    "collision freq model" : "collision_activate_decay, 4 parameter",
+    "collision freq model" : "BornLogPeak, 5 parameters",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 4 # number of parameters
-numchains = 8
+ndim = 5 # number of parameters
+numchains = 10
 numsamples = 5_000
 ```
 
@@ -240,7 +245,7 @@ numsamples = 5_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 # Read in MCMC data
@@ -259,10 +264,11 @@ Note there are multiple chains being plotted for each parameter, showing their p
 ```{code-cell} ipython3
 plt.close()
 paramnames = (
-    "gen. Lorentzian height",
-    "gen. Lorentzian power-law",
+    "Born height",
+    "Logistic height",
     "Logistic activate",
-    "Logistic gradient"
+    "Logistic gradient",
+    "Logistic decay"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = backend.get_chain()
@@ -299,29 +305,29 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 ```{code-cell} ipython3
 # randomly pick 100 samples from our MCMC sampling data
 inds = rng.integers(len(flat_samples), size=100)
-
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
     plt.semilogx(
         freq_data, 
-        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        collisionfreq.real(freq_data / AtomicUnits.energy, sample), 
         "C1", 
-        alpha=0.1
+        alpha=0.1,
+        
     )
 
 # plot AA collision frequency
 plt.plot(freq_data,
          true_collfreq_fn(freq_data / AtomicUnits.energy).real,
          c="k",
-         label="Avg. Atom",
+         label="Born",
          lw=2,
          ls='--'
         )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-# plt.ylim(1e-3)
+plt.ylim(1e-6)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_AAdata_collisionsamples")
 ```
@@ -341,7 +347,7 @@ for ind in inds:
         alpha=0.1
     )
 # plot data
-plt.loglog(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
+plt.loglog(freq_data, elf_data, c="k", label="T+", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
@@ -361,7 +367,7 @@ for ind in inds:
         alpha=0.1
     )
 # plot data
-plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
+plt.plot(freq_data, elf_data, c="k", label="T+", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
