--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -35,7 +35,7 @@ import emcee
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
+from src.inference.collision_models import BornLogPeak
 from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
 from src.utilities import AtomicUnits, elec_loss_fn
 import src.inference.probability_models as prob
@@ -57,28 +57,25 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
-# chemical potential
-cp = 0.3212 # [at u]
+# charge state
+Z = 3
 
-datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
+datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
 AA_collfreq_data = datadump[1] + 1j * datadump[2]
-dos_data = datadump[3]
 
 # function for Average Atom collision freq
 AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
 
 # electron data
-electrons = ElectronGas(t, d, dos_fn, cp)
+electrons = ElectronGas(t, d)
 
 # dielectric function
 dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
+freq_data = np.linspace(2, 55, 50)# np.geomspace(1e-1, 1e3, 300) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -87,13 +84,7 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-def collisionfreq(freq, params):
-    # real part
-    recollision = collision_activate_decay(freq, *params)
-    # imaginary part
-    imcollision = collision_activate_decay_imag(freq, *params)
-
-    return recollision + 1j * imcollision
+collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
 ```
 
 # Define the ELF model
@@ -116,18 +107,21 @@ Note that we are only fitting to the real part of the data.
 The imaginary part is found from the Kramers-Kronig transformation.
 
 ```{code-cell} ipython3
+# write real part in form acceptable by scipy.optimize.curve_fit
+def collisionfreqreal(x, p0, p1, p2, p3, p4):
+    return collisionfreq.real(x, (p0, p1, p2, p3, p4))
 # fit to data
 popt_AAcoll, pcov = optimize.curve_fit(
-    collision_activate_decay, 
+    collisionfreqreal, 
     freq_data / AtomicUnits.energy,
     AA_collfreq_fn(freq_data / AtomicUnits.energy).real,
-    (1,1,1,1),
+    (1,1,1,1,1),
     bounds=(0, np.inf)
 )
 print(popt_AAcoll)
 
 # plot to compare
-plt.semilogx(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
+plt.plot(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
 plt.plot(freq_data, AAcoll.imag, c="C3", ls="--")
 plt.plot(freq_data, (modelcoll := collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
 plt.plot(freq_data, modelcoll.imag, c="C0", ls="--")
@@ -152,11 +146,11 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="abs"
     )
 
 # initial parameter guesses
-initparams = (1, 1, 1, 1)
+initparams = (1, 1, 1, 1, 1)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=150)
@@ -177,12 +171,11 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C3", label="true")
+plt.plot(freq_data, elf_data, c="C3", label="true")
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.ylim(1e-6)
 plt.legend()
 ```
 
@@ -195,17 +188,18 @@ lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 100],
-    [0, 100]
+    [0, 2],
+    [0, 10],
+    [0, 4]
 ]
 
 logprior = prob.UniformLogPrior(prior_lims)
-loglikelihood = prob.SoftCutoffLogLikelihood(
+loglikelihood = prob.SquaredExpLogLikelihood(
     elf_data,
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualweight="rel"
+    residualweight="abs"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -216,8 +210,8 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = f"relative residual - q = {wavenum}"
+samplesfile = "../../data/mcmc/mcmc_modeldata_bornlogpeak"
+dataset = f"absolute residual - q = {wavenum}"
 ```
 
 ```{code-cell} ipython3
@@ -229,15 +223,15 @@ runinfo = {
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
     "frequency grid [eV]" : freq_data,
-    "collision freq model" : "collision_activate_decay, 4 parameter",
-    "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "residual" : "relative",
+    "collision freq model" : "BornLogPeak, 5 parameters",
+    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_cutoff}",
+    "residual" : "absolute",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 4 # number of parameters
-numchains = 8
+ndim = 5 # number of parameters
+numchains = 10
 numsamples = 5_000
 ```
 
@@ -274,10 +268,11 @@ Note there are multiple chains being plotted for each parameter, showing their p
 ```{code-cell} ipython3
 plt.close()
 paramnames = (
-    "gen. Lorentzian height",
-    "gen. Lorentzian power-law",
+    "Born height",
+    "Logistic height",
     "Logistic activate",
-    "Logistic gradient"
+    "Logistic gradient",
+    "Logistic decay"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = backend.get_chain()
@@ -318,7 +313,7 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.semilogx(
+    plt.plot(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample), 
         "C1", 
@@ -360,7 +355,7 @@ plt.loglog(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylim(1e-6)
+# plt.ylim(1e-6)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_ELFsamples")
 ```
@@ -380,7 +375,7 @@ plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 60)
+# plt.xlim(0, 60)
 plt.legend()
 ```
 
