--- a/notebooks/exploratory/7.0-twh-inference-TDDFT.md
+++ b/notebooks/exploratory/7.0-twh-inference-TDDFT.md
@@ -40,7 +40,7 @@ import emcee
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
+from src.inference.collision_models import BornLogPeak
 from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
 from src.utilities import AtomicUnits, elec_loss_fn
 import src.inference.probability_models as prob
@@ -49,9 +49,7 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Get average-atom DOS data
-
-Also define the conditions of the material and wave number
+Define the conditions of the material and wave number
 
 ```{code-cell} ipython3
 AAdatafile = "../../data/external/Al-1 _vwf.txt"
@@ -69,14 +67,14 @@ cp = 0.3212 # [at u]
 # ionization state (at T = 1 eV)
 Z = 3
 
-# read in data
-AAdata = np.loadtxt(AAdatafile, skiprows=9, usecols=[0, 9], unpack=True)
+# # read in data
+# AAdata = np.loadtxt(AAdatafile, skiprows=9, usecols=[0, 9], unpack=True)
 
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, np.sqrt(2 * AAdata[0] / AtomicUnits.energy), AAdata[1])
+# # function for DOS ratio
+# dos_fn = lambda x : np.interp(x, np.sqrt(2 * AAdata[0] / AtomicUnits.energy), AAdata[1])
 
 # electron data
-electrons = ElectronGas(t, d)#, dos_fn, cp)
+electrons = ElectronGas(t, d)
 
 # dielectric function
 dielectric = Mermin(electrons)
@@ -89,13 +87,7 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-def collisionfreq(freq, params):
-    # real part
-    recollision = collision_activate_decay(freq, *params)
-    # imaginary part
-    imcollision = collision_activate_decay_imag(freq, *params)
-
-    return (recollision + 1j * imcollision)
+collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
 ```
 
 # Define the ELF model
@@ -118,16 +110,9 @@ def elfmodel(freq, params):
 DFTdatafile = "../../data/external/Al_MD_1eV_DSF_more_qs.txt"
 dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 3], unpack=True)
 # create log frequency grid
-freq_grid = np.geomspace(1e-1, 1e3, 200) # [eV]
+freq_grid = np.linspace(2, 55, 50) # np.geomspace(1e-1, 1e3, 300) # [eV]
 # linear interpolate DSF data on the log grid and convert to atomic units
 dsf_interp = np.interp(freq_grid, dftfreq, dftdsf) * AtomicUnits.energy
-
-# # truncate and thin DFT data to about 100 points
-# truncatemask = (10 < dftfreq) & (dftfreq < 70)
-# thin_step = 15
-# freq_data = dftfreq[truncatemask][::thin_step]
-# # also convert DSF to atomic units
-# dftdsf = dftdsf[truncatemask][::thin_step] * AtomicUnits.energy
 
 
 # convert the DSF to an ELF
@@ -142,9 +127,9 @@ elf_full_data = (
 )
 
 # truncate range to focus only on peak of ELF
-percentage_of_peak = 0.85
+percentage_of_peak = 1
 threshold = (1 - percentage_of_peak) * np.max(elf_full_data)
-mask = (elf_full_data > threshold) & (freq_grid > 10)
+mask = (elf_full_data > threshold)
 
 freq_data = freq_grid[mask]
 elf_data = elf_full_data[mask]
@@ -154,10 +139,9 @@ plt.plot(freq_data, elf_data, lw=2, c="black")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
-plt.xlim(5, 45)
-plt.axhline(threshold, ls="--", c="gray")
+# plt.axhline(threshold, ls="--", c="gray")
 
-print(f"length of data = {freq_data.shape}")
+# print(f"length of data = {freq_data.shape}")
 ```
 
 # Define residual function for ELF data
@@ -166,7 +150,7 @@ We also mask the relative residual so it only considers the peaks in the data.
 Finally, we do a least squares fit of the ELF model to the ELF data by varying the parameters of the collision frequency model.
 
 ```{code-cell} ipython3
-residualtype = "rel"
+residualtype = "abs"
 # setup
 def residual(params):
     return prob.residual(
@@ -177,12 +161,14 @@ def objective(params):
     return np.linalg.norm(residual(params))
     
 # initial parameter guesses
-initparams = [0.48647414, 0.06293753, 0.27164363, 8.66461154]
+initparams = (1, 1, 1, 1, 1)
 
 # optimization results
-# optresult = optimize.least_squares(residual, initparams, bounds=(1e-2, 49), max_nfev=150)
-bounds = [(1e-2, 50), ] * 4
-optresult = optimize.dual_annealing(objective, bounds) 
+bounds = ([0, 0, 0, 0, 0], [5, 4.9, 40, 9, 8])
+
+optresult = optimize.least_squares(residual, initparams, bounds=bounds, max_nfev=150)
+# bounds = [(1e-2, 50), ] * 5
+# optresult = optimize.shgo(objective, bounds) 
 ```
 
 ```{code-cell} ipython3
@@ -191,13 +177,11 @@ optresult
 
 ```{code-cell} ipython3
 # optimized
-
-plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", lw=3)
+plt.semilogx(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", lw=3)
 plt.plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, optresult.x).real, c="C0", ls="--")
 plt.plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, initparams).real, c="C3", label="init.")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.xscale("log")
 plt.legend()
 ```
 
@@ -205,17 +189,8 @@ plt.legend()
 plt.plot(freq_data, elf_data, label="TD-DFT")
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, label="opt.", ls="--")
-#plt.plot(freq_data, elfmodel(freq_data / AtomicUnits.energy, initparams), label="init.", ls="--")
-plt.plot(freq_data, 0.6 + np.zeros_like(freq_data), "k.")
-plt.ylabel("ELF [au]")
-plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.legend()
-```
-
-```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, label="TD-DFT")
-plt.plot(freq_data, opt_elf, label="opt.", ls="--")
-#plt.plot(freq_data, elfmodel(freq_data / AtomicUnits.energy, initparams), label="init.", ls="--")
+# plt.plot(freq_data, elfmodel(freq_data / AtomicUnits.energy, initparams), label="init.", ls="--")
+plt.plot(freq_data, np.zeros_like(freq_data), "k.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.legend()
@@ -228,14 +203,15 @@ Define a (log) posterior distribution that only depends on the parameters of the
 ```{code-cell} ipython3
 lik_cutoff = 0.05
 prior_lims = [
-    [1e-3, 50],
-    [1e-3, 50],
-    [1e-3, 50],
-    [1e-3, 50]
+    [0.2, 5],
+    [0, 15],
+    [0, 40],
+    [0, 9],
+    [0, 4]
 ]
 
 logprior = prob.UniformLogPrior(prior_lims)
-loglikelihood = prob.SoftCutoffLogLikelihood(
+loglikelihood = prob.SquaredExpLogLikelihood(
     elf_data,
     freq_data / AtomicUnits.energy,
     elfmodel,
@@ -243,6 +219,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     residualweight = residualtype
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
+optresult.x = [0.3, optresult.x[1], 5, 6, optresult.x[4]]
 logposterior(optresult.x)
 ```
 
@@ -251,8 +228,9 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold - ideal electrons"
+samplesfile = "../../data/mcmc/mcmc_tddft_singleq_sqexplik"
+# dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold - ideal electrons"
+dataset = f"{residualtype} residual - q = {wavenum} - reduced data range - ideal electrons"
 ```
 
 ```{code-cell} ipython3
@@ -262,18 +240,20 @@ runinfo = {
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
+    "chemical potential [a.u.]" : electrons.chemicalpot,
     "frequency grid [eV]" : freq_grid,
-    "frequency grid mask" : mask,
-    "collision freq model" : "collision_activate_decay, 4 parameter",
-    "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
+    # "frequency grid mask" : mask,
+    "collision freq model" : "BornLogPeak, 5 parameters",
+    # "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
+    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_cutoff}",
     "residual" : residualtype,
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 
 # sampler properties
-ndim = 4 # number of parameters
-numchains = 8
-numsamples = 50_000
+ndim = 5 # number of parameters
+numchains = 10
+numsamples =5_000
 ```
 
 ```{code-cell} ipython3
@@ -281,25 +261,23 @@ numsamples = 50_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
+sampler = inference_loop(
+    initial_state, 
+    logposterior,
+    numsamples, 
+    samplesfile, 
+    dataset, 
+    runinfo, 
+    overwrite=True
+)
 ```
 
-# Read in MCMC data
+#### Read in MCMC data
 
 ```{code-cell} ipython3
 # dataset = "rel residual - q = 1.55"
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
-
-# with h5py.File(samplesfile, "a") as f:
-#     print(list(f.keys()))
-#     freq = f[dataset].attrs["frequency grid [eV]"]
-#     dset = f[dataset]
-#     for attr in dset.attrs:
-#         if attr != "random_state_1":
-#             print(f"{attr} : {dset.attrs[attr]}")
-# print(freq)
-# np.allclose(freq, freq_data)
 ```
 
 ```{code-cell} ipython3
@@ -314,15 +292,15 @@ flat_samples = flat_mcmc_samples(backend)
 
 ## Markov chain tracings for each parameter
 
-Note there are multiple chains being plotted for each parameter, showing their paths in the 4D parameter space.
+Note there are multiple chains being plotted for each parameter, showing their paths in parameter space.
 
 ```{code-cell} ipython3
-plt.close()
 paramnames = (
-    "gen. Lorentzian height",
-    "gen. Lorentzian power-law",
+    "Born height",
+    "Logistic height",
     "Logistic activate",
-    "Logistic gradient"
+    "Logistic gradient",
+    "Logistic decay"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
 samples = backend.get_chain()
@@ -363,26 +341,26 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 ```{code-cell} ipython3
 # randomly pick 100 samples from our MCMC sampling data
 inds = rng.integers(len(flat_samples), size=100)
-x = np.geomspace(1e-1, 1e3, 200)
 # plot collision function for different parameters from MCMC sampling
+x = np.geomspace(1e-1, 1e3, 200)
 for ind in inds:
     sample = flat_samples[ind]
     plt.plot(
-        x,
-        collisionfreq(x / AtomicUnits.energy, sample).real,
-        "grey",
+        freq_grid,
+        collisionfreq.real(freq_grid / AtomicUnits.energy, sample),
+        "C1",
         alpha=0.1
     )
     plt.semilogx(
-        freq_data, 
-        collisionfreq(freq_data / AtomicUnits.energy, sample).real, 
-        "C1", 
-        alpha=0.2
+        x, 
+        collisionfreq.real(x / AtomicUnits.energy, sample), 
+        "grey", 
+        alpha=0.1
     )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.ylim(0, 1)
+plt.yscale('log')
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
@@ -416,19 +394,18 @@ for ind in inds:
     plt.plot(
         freq_grid,
         elfmodel(freq_grid/ AtomicUnits.energy, sample), 
-        "grey", 
+        "C1", 
         alpha=0.1
     )
-    plt.plot(
-        freq_data,
-        elfmodel(freq_data / AtomicUnits.energy, sample), 
-        "C1", 
-        alpha=0.2
-    )
+    # plt.plot(
+    #     freq_data,
+    #     elfmodel(freq_data / AtomicUnits.energy, sample), 
+    #     "C1", 
+    #     alpha=0.2
+    # )
 # plot data
-plt.plot(freq_grid, elf_full_data, c="k", label="true ELF", lw=2, ls='--')
+plt.plot(freq_grid, elf_full_data, c="k", label="TDDFT ELF", lw=2, ls='--')
 
-plt.xlim(5, 45)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
@@ -445,10 +422,6 @@ elfsum = np.trapz(x * y, x)
 sumrule = np.pi / 2 * (4 * np.pi * d)
 print(f"integral = {elfsum}")
 print(f"sum rule = {sumrule}")
-```
-
-```{code-cell} ipython3
-electrons.chemicalpot
 ```
 
 ```{code-cell} ipython3
