--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -75,7 +75,7 @@ electrons = ElectronGas(t, d)
 dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.linspace(2, 55, 50)# np.geomspace(1e-1, 1e3, 300) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -84,7 +84,8 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
+def collisionfreq(x, p):
+    return BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)(x, (p[0], p[1], p[2], 1 / p[3], p[4]))
 ```
 
 # Define the ELF model
@@ -109,22 +110,22 @@ The imaginary part is found from the Kramers-Kronig transformation.
 ```{code-cell} ipython3
 # write real part in form acceptable by scipy.optimize.curve_fit
 def collisionfreqreal(x, p0, p1, p2, p3, p4):
-    return collisionfreq.real(x, (p0, p1, p2, p3, p4))
+    return collisionfreq(x, (p0, p1, p2, p3, p4)).real
 # fit to data
 popt_AAcoll, pcov = optimize.curve_fit(
     collisionfreqreal, 
     freq_data / AtomicUnits.energy,
     AA_collfreq_fn(freq_data / AtomicUnits.energy).real,
     (1,1,1,1,1),
-    bounds=(0, np.inf)
+    bounds=(1e-6, np.inf)
 )
 print(popt_AAcoll)
 
 # plot to compare
-plt.plot(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
+plt.semilogx(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
 plt.plot(freq_data, AAcoll.imag, c="C3", ls="--")
-plt.plot(freq_data, (modelcoll := collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
-plt.plot(freq_data, modelcoll.imag, c="C0", ls="--")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C0", label="opt")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).imag, c="C0", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
 plt.legend()
@@ -171,7 +172,7 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.plot(freq_data, elf_data, c="C3", label="true")
+plt.semilogx(freq_data, elf_data, c="C3", label="true")
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
@@ -188,8 +189,8 @@ lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 2],
-    [0, 10],
+    [0, 40],
+    [np.min(freq_data) / AtomicUnits.energy / 10, np.max(freq_data) / AtomicUnits.energy / 10],
     [0, 4]
 ]
 
@@ -199,7 +200,7 @@ loglikelihood = prob.SquaredExpLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualweight="abs"
+    residualweight="rel"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -211,7 +212,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata_bornlogpeak"
-dataset = f"absolute residual - q = {wavenum}"
+dataset = f"relative residual - q = {wavenum} - v2"
 ```
 
 ```{code-cell} ipython3
@@ -223,7 +224,7 @@ runinfo = {
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
     "frequency grid [eV]" : freq_data,
-    "collision freq model" : "BornLogPeak, 5 parameters",
+    "collision freq model" : "BornLogPeak, 5 parameters (inverse grad parameter)",
     "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_cutoff}",
     "residual" : "absolute",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
@@ -232,7 +233,7 @@ runinfo = {
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples = 5_000
+numsamples = 2_500
 ```
 
 ```{code-cell} ipython3
@@ -271,7 +272,7 @@ paramnames = (
     "Born height",
     "Logistic height",
     "Logistic activate",
-    "Logistic gradient",
+    "Logistic rise",
     "Logistic decay"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
@@ -315,13 +316,13 @@ for ind in inds:
     sample = flat_samples[ind]
     plt.plot(
         freq_data, 
-        collisionfreq(freq_data / AtomicUnits.energy, sample), 
+        collisionfreq(freq_data / AtomicUnits.energy, sample).real, 
         "C1", 
         alpha=0.1
     )
 
 # plot true collision frequency
-plt.plot(freq_data,
+plt.loglog(freq_data,
          collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real,
          c="k",
          label="true",
@@ -375,8 +376,35 @@ plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-# plt.xlim(0, 60)
+plt.xlim(0, 60)
 plt.legend()
+```
+
+```{code-cell} ipython3
+from scipy.integrate import quad
+sample = flat_samples[inds[67]]
+x = np.linspace(1e-6, 500, 3000) # atomic units
+y = elfmodel(x, sample) # ELF - atomic untis
+elfsum = np.trapz(x * y, x) # integral is omega^2 units
+sumrule = np.pi / 2 * (4 * np.pi * d) # sum rule is omega^2 units
+print(f"ELF integral = {elfsum}")
+print(f"ELF sum rule = {sumrule}")
+```
+
+```{code-cell} ipython3
+sample = flat_samples[inds[67]]
+x = np.linspace(1e-6, 500, 3000)
+dsf = (
+    Z 
+    / (1 - np.exp(-x / electrons.temperature)) 
+    * (wavenum * AtomicUnits.length)**2
+    / (4 * np.pi**2 * electrons.density)
+    * elfmodel(x, sample)
+)
+dsfsum = np.trapz(x * dsf * (1 - np.exp(-x / electrons.temperature)), x)
+dsfsumrule = (wavenum * AtomicUnits.length)**2 / 2 * Z
+print(f"DSF integral = {dsfsum}")
+print(f"DSF sum rule = {dsfsumrule}")
 ```
 
 ```{code-cell} ipython3
