--- a/notebooks/exploratory/7.0-twh-inference-TDDFT.md
+++ b/notebooks/exploratory/7.0-twh-inference-TDDFT.md
@@ -87,7 +87,8 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
+def collisionfreq(x, p):
+    return BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)(x, (p[0], p[1], p[2], 1 / p[3], p[4]))
 ```
 
 # Define the ELF model
@@ -110,7 +111,7 @@ def elfmodel(freq, params):
 DFTdatafile = "../../data/external/Al_MD_1eV_DSF_more_qs.txt"
 dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 3], unpack=True)
 # create log frequency grid
-freq_grid = np.linspace(2, 55, 50) # np.geomspace(1e-1, 1e3, 300) # [eV]
+freq_grid = np.geomspace(1e-1, 1e3, 200) # [eV]
 # linear interpolate DSF data on the log grid and convert to atomic units
 dsf_interp = np.interp(freq_grid, dftfreq, dftdsf) * AtomicUnits.energy
 
@@ -127,9 +128,9 @@ elf_full_data = (
 )
 
 # truncate range to focus only on peak of ELF
-percentage_of_peak = 1
+percentage_of_peak = 0.9
 threshold = (1 - percentage_of_peak) * np.max(elf_full_data)
-mask = (elf_full_data > threshold)
+mask = (elf_full_data > threshold) & (freq_grid > 3)
 
 freq_data = freq_grid[mask]
 elf_data = elf_full_data[mask]
@@ -164,10 +165,10 @@ def objective(params):
 initparams = (1, 1, 1, 1, 1)
 
 # optimization results
-bounds = ([0, 0, 0, 0, 0], [5, 4.9, 40, 9, 8])
+bounds = [5 * [1e-1], [5, 5, 40, np.max(freq_grid) / AtomicUnits.energy / 10, 5]]
 
 optresult = optimize.least_squares(residual, initparams, bounds=bounds, max_nfev=150)
-# bounds = [(1e-2, 50), ] * 5
+# bounds = [(1e-2, 5), (1e-2, 4.9), (1e-2, 5), (1e-2, 10), (1e-2, 5)]
 # optresult = optimize.shgo(objective, bounds) 
 ```
 
@@ -201,12 +202,12 @@ plt.legend()
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_cutoff = 0.05
+lik_sigma = 0.05
 prior_lims = [
-    [0.2, 5],
-    [0, 15],
+    [0, 5],
+    [0, 5.1],
     [0, 40],
-    [0, 9],
+    [np.min(freq_grid) / AtomicUnits.energy / 10, np.max(freq_grid) / AtomicUnits.energy / 10],
     [0, 4]
 ]
 
@@ -215,11 +216,10 @@ loglikelihood = prob.SquaredExpLogLikelihood(
     elf_data,
     freq_data / AtomicUnits.energy,
     elfmodel,
-    lik_cutoff,
+    lik_sigma,
     residualweight = residualtype
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
-optresult.x = [0.3, optresult.x[1], 5, 6, optresult.x[4]]
 logposterior(optresult.x)
 ```
 
@@ -230,7 +230,7 @@ We will use the results from the optimization to initialize the Markov chains.
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft_singleq_sqexplik"
 # dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold - ideal electrons"
-dataset = f"{residualtype} residual - q = {wavenum} - reduced data range - ideal electrons"
+dataset = f"{residualtype} residual - q = {wavenum} - ideal electrons"
 ```
 
 ```{code-cell} ipython3
@@ -243,9 +243,9 @@ runinfo = {
     "chemical potential [a.u.]" : electrons.chemicalpot,
     "frequency grid [eV]" : freq_grid,
     # "frequency grid mask" : mask,
-    "collision freq model" : "BornLogPeak, 5 parameters",
+    "collision freq model" : "BornLogPeak, 5 parameters (inverse grad parameter)",
     # "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_cutoff}",
+    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_sigma}",
     "residual" : residualtype,
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
@@ -299,7 +299,7 @@ paramnames = (
     "Born height",
     "Logistic height",
     "Logistic activate",
-    "Logistic gradient",
+    "Logistic rise",
     "Logistic decay"
 )
 fig, axes = plt.subplots(ndim, figsize=(10,2.5*5), sharex=True)
@@ -342,18 +342,17 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 # randomly pick 100 samples from our MCMC sampling data
 inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
-x = np.geomspace(1e-1, 1e3, 200)
 for ind in inds:
     sample = flat_samples[ind]
     plt.plot(
-        freq_grid,
-        collisionfreq.real(freq_grid / AtomicUnits.energy, sample),
+        freq_data,
+        collisionfreq(freq_data / AtomicUnits.energy, sample).real,
         "C1",
-        alpha=0.1
+        alpha=0.2
     )
     plt.semilogx(
-        x, 
-        collisionfreq.real(x / AtomicUnits.energy, sample), 
+        freq_grid, 
+        collisionfreq(freq_grid / AtomicUnits.energy, sample).real, 
         "grey", 
         alpha=0.1
     )
@@ -389,23 +388,23 @@ This uses the same random samples from the above plot.
 
 ```{code-cell} ipython3
 # plot ELF for different parameters from MCMC sampling
-for ind in inds:
+for ind in inds[0:10]:
     sample = flat_samples[ind]
     plt.plot(
-        freq_grid,
-        elfmodel(freq_grid/ AtomicUnits.energy, sample), 
+        freq_data,
+        elfmodel(freq_data/ AtomicUnits.energy, sample), 
         "C1", 
+        alpha=0.2
+    )
+    plt.plot(
+        freq_grid,
+        elfmodel(freq_grid / AtomicUnits.energy, sample), 
+        "grey", 
         alpha=0.1
     )
-    # plt.plot(
-    #     freq_data,
-    #     elfmodel(freq_data / AtomicUnits.energy, sample), 
-    #     "C1", 
-    #     alpha=0.2
-    # )
 # plot data
 plt.plot(freq_grid, elf_full_data, c="k", label="TDDFT ELF", lw=2, ls='--')
-
+plt.xlim(0, 50)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
@@ -415,13 +414,28 @@ plt.legend()
 
 ```{code-cell} ipython3
 from scipy.integrate import quad
-sample = flat_samples[inds[0]]
+sample = flat_samples[inds[67]]
 x = np.linspace(1e-6, 500, 3000)
 y = elfmodel(x, sample)
 elfsum = np.trapz(x * y, x)
 sumrule = np.pi / 2 * (4 * np.pi * d)
 print(f"integral = {elfsum}")
 print(f"sum rule = {sumrule}")
+```
+
+```{code-cell} ipython3
+def dosintegrand(x):
+    dos = np.sqrt(2 * x) / np.pi**2
+    f = 1 / (1 + np.exp((x - electrons.chemicalpot) / electrons.temperature))
+    return dos * f
+```
+
+```{code-cell} ipython3
+x = np.linspace(0, 4, 500)
+y = dosintegrand(x)
+print(f"temperature = {electrons.temperature} (at. u.)")
+print(f"chemical potential = {electrons.chemicalpot} (at. u.)")
+print(f"DOS integral = {np.trapz(y, x)}")
 ```
 
 ```{code-cell} ipython3
