--- a/notebooks/exploratory/7.0-twh-inference-TDDFT.md
+++ b/notebooks/exploratory/7.0-twh-inference-TDDFT.md
@@ -87,8 +87,7 @@ wavenum = 1.55 # 1/[angstrom]
 
 ```{code-cell} ipython3
 # define our collision frequency function
-def collisionfreq(x, p):
-    return BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)(x, (p[0], p[1], p[2], 1 / p[3], p[4]))
+collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
 ```
 
 # Define the ELF model
@@ -111,7 +110,7 @@ def elfmodel(freq, params):
 DFTdatafile = "../../data/external/Al_MD_1eV_DSF_more_qs.txt"
 dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 3], unpack=True)
 # create log frequency grid
-freq_grid = np.geomspace(1e-1, 1e3, 200) # [eV]
+freq_grid = np.geomspace(1e-1, 1e3, 300) # [eV]
 # linear interpolate DSF data on the log grid and convert to atomic units
 dsf_interp = np.interp(freq_grid, dftfreq, dftdsf) * AtomicUnits.energy
 
@@ -128,21 +127,22 @@ elf_full_data = (
 )
 
 # truncate range to focus only on peak of ELF
-percentage_of_peak = 0.9
+percentage_of_peak = 0.99
 threshold = (1 - percentage_of_peak) * np.max(elf_full_data)
 mask = (elf_full_data > threshold) & (freq_grid > 3)
 
 freq_data = freq_grid[mask]
 elf_data = elf_full_data[mask]
 
-plt.semilogx(freq_grid, elf_full_data, c="red", label="TD-DFT (log-grid)", lw=2)
+plt.plot(freq_grid, elf_full_data, c="red", label="TD-DFT (log-grid)", lw=2)
 plt.plot(freq_data, elf_data, lw=2, c="black")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
 # plt.axhline(threshold, ls="--", c="gray")
-
-# print(f"length of data = {freq_data.shape}")
+plt.xlim(0, 50)
+plt.ylim(0, 1.2)
+print(f"length of data = {freq_data.shape}")
 ```
 
 # Define residual function for ELF data
@@ -165,7 +165,7 @@ def objective(params):
 initparams = (1, 1, 1, 1, 1)
 
 # optimization results
-bounds = [5 * [1e-1], [5, 5, 40, np.max(freq_grid) / AtomicUnits.energy / 10, 5]]
+bounds = [[0, 0, 0, 1e-1, 0], [5, 9.9, 1.4, 50, 4]]
 
 optresult = optimize.least_squares(residual, initparams, bounds=bounds, max_nfev=150)
 # bounds = [(1e-2, 5), (1e-2, 4.9), (1e-2, 5), (1e-2, 10), (1e-2, 5)]
@@ -181,6 +181,7 @@ optresult
 plt.semilogx(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", lw=3)
 plt.plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, optresult.x).real, c="C0", ls="--")
 plt.plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, initparams).real, c="C3", label="init.")
+plt.plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, optresult.x).imag, c="C2", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
 plt.legend()
@@ -202,14 +203,15 @@ plt.legend()
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_sigma = 0.05
+lik_sigma = 0.1
 prior_lims = [
+    [0, 0.2],
     [0, 5],
-    [0, 5.1],
-    [0, 40],
-    [np.min(freq_grid) / AtomicUnits.energy / 10, np.max(freq_grid) / AtomicUnits.energy / 10],
+    [0, 1.5],
+    [1e-1, 10],
     [0, 4]
 ]
+
 
 logprior = prob.UniformLogPrior(prior_lims)
 loglikelihood = prob.SquaredExpLogLikelihood(
@@ -228,9 +230,8 @@ logposterior(optresult.x)
 We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_tddft_singleq_sqexplik"
-# dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold - ideal electrons"
-dataset = f"{residualtype} residual - q = {wavenum} - ideal electrons"
+samplesfile = "../../data/mcmc/mcmc_tddft_singleq"
+dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold"
 ```
 
 ```{code-cell} ipython3
@@ -242,7 +243,7 @@ runinfo = {
     "input data wavenumber [1/angstrom]" : wavenum,
     "chemical potential [a.u.]" : electrons.chemicalpot,
     "frequency grid [eV]" : freq_grid,
-    # "frequency grid mask" : mask,
+    "frequency grid mask" : mask,
     "collision freq model" : "BornLogPeak, 5 parameters (inverse grad parameter)",
     # "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_sigma}",
@@ -253,7 +254,7 @@ runinfo = {
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples =5_000
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
@@ -340,7 +341,7 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 
 ```{code-cell} ipython3
 # randomly pick 100 samples from our MCMC sampling data
-inds = rng.integers(len(flat_samples), size=100)
+inds = rng.integers(len(flat_samples), size=50)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
@@ -350,16 +351,22 @@ for ind in inds:
         "C1",
         alpha=0.2
     )
-    plt.semilogx(
+    plt.loglog(
         freq_grid, 
         collisionfreq(freq_grid / AtomicUnits.energy, sample).real, 
         "grey", 
         alpha=0.1
     )
+    # plt.semilogx(
+    #     freq_grid, 
+    #     collisionfreq(freq_grid / AtomicUnits.energy, sample).imag, 
+    #     "C0", 
+    #     alpha=0.1
+    # )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.yscale('log')
+# plt.yscale('log')
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
@@ -388,7 +395,7 @@ This uses the same random samples from the above plot.
 
 ```{code-cell} ipython3
 # plot ELF for different parameters from MCMC sampling
-for ind in inds[0:10]:
+for ind in inds:
     sample = flat_samples[ind]
     plt.plot(
         freq_data,
@@ -414,7 +421,7 @@ plt.legend()
 
 ```{code-cell} ipython3
 from scipy.integrate import quad
-sample = flat_samples[inds[67]]
+sample = flat_samples[inds[47]]
 x = np.linspace(1e-6, 500, 3000)
 y = elfmodel(x, sample)
 elfsum = np.trapz(x * y, x)
