fix mcmc file name

--- a/notebooks/exploratory/7.0-twh-inference-TDDFT.md
+++ b/notebooks/exploratory/7.0-twh-inference-TDDFT.md
@@ -80,7 +80,7 @@ electrons = ElectronGas(t, d)
 dielectric = Mermin(electrons)
 
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 1.55 # 1/[angstrom]
+wavenum = 0.78 # 1/[angstrom]
 ```
 
 # Define collision frequency model
@@ -108,7 +108,7 @@ def elfmodel(freq, params):
 
 ```{code-cell} ipython3
 DFTdatafile = "../../data/external/Al_MD_1eV_DSF_more_qs.txt"
-dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 3], unpack=True)
+dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 1], unpack=True)
 # create log frequency grid
 freq_grid = np.geomspace(1e-1, 1e3, 300) # [eV]
 # linear interpolate DSF data on the log grid and convert to atomic units
@@ -127,7 +127,7 @@ elf_full_data = (
 )
 
 # truncate range to focus only on peak of ELF
-percentage_of_peak = 0.99
+percentage_of_peak = 0.80
 threshold = (1 - percentage_of_peak) * np.max(elf_full_data)
 mask = (elf_full_data > threshold) & (freq_grid > 3)
 
@@ -141,7 +141,7 @@ plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
 # plt.axhline(threshold, ls="--", c="gray")
 plt.xlim(0, 50)
-plt.ylim(0, 1.2)
+#plt.ylim(0, 1.2)
 print(f"length of data = {freq_data.shape}")
 ```
 
@@ -205,10 +205,10 @@ Define a (log) posterior distribution that only depends on the parameters of the
 ```{code-cell} ipython3
 lik_sigma = 0.1
 prior_lims = [
-    [0, 0.2],
     [0, 5],
-    [0, 1.5],
-    [1e-1, 10],
+    [0, 5],
+    [0, 40],
+    [1e-3, 10],
     [0, 4]
 ]
 
@@ -231,7 +231,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft_singleq"
-dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold"
+dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold"
 ```
 
 ```{code-cell} ipython3
@@ -254,7 +254,7 @@ runinfo = {
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples = 5_000
+numsamples = 2_500
 ```
 
 ```{code-cell} ipython3
@@ -269,14 +269,25 @@ sampler = inference_loop(
     samplesfile, 
     dataset, 
     runinfo, 
-    overwrite=True
+    overwrite=False
 )
 ```
 
 #### Read in MCMC data
 
 ```{code-cell} ipython3
-# dataset = "rel residual - q = 1.55"
+# view attributes of dataset
+import h5py
+with h5py.File(samplesfile, "a") as f:
+    # newname = 'abs residual - q = 1.55 - 99% peak threshold - unbiased prior'
+    # oldname = 'abs residual - q = 1.55 - 0.99% peak threshold - unbiased prior'
+    # f[newname] = f[oldname]
+    # del f[oldname]
+    print(list(f.keys()))
+```
+
+```{code-cell} ipython3
+# dataset = 'abs residual - q = 1.55 - 0.99% peak threshold - prior peak restricted'
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
 ```
