--- a/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
+++ b/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
@@ -193,7 +193,7 @@ initparams = (.1,.1,1,1,1e-6)
 
 # optimization results
 optresult = optimize.least_squares(
-    residual, initparams, bounds=(0, 4), max_nfev=150
+    residual, initparams, bounds=(0, 1), max_nfev=150
 )
 # bounds = [(1e-2, 50), ] * 4
 # optresult = optimize.shgo(objective, bounds) 
@@ -244,8 +244,8 @@ lik_sigma = 0.1
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 3],
-    [1e-1, 10],
+    [0, 1.5],
+    [1e-6, 10],
     [0, 5]
 ]
 
@@ -268,7 +268,11 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold"
+dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold - v2"
+```
+
+```{code-cell} ipython3
+dataset
 ```
 
 ```{code-cell} ipython3
@@ -290,7 +294,7 @@ runinfo = {
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples = 1_000
+numsamples = 2_500
 ```
 
 ```{code-cell} ipython3
@@ -305,26 +309,29 @@ sampler = inference_loop(
     samplesfile,
     dataset,
     runinfo,
-    overwrite=False,
+    overwrite=True,
 )
 ```
 
 # Read in MCMC data
 
 ```{code-cell} ipython3
+# view attributes of dataset
+import h5py
+with h5py.File(samplesfile, "a") as f:
+    # newname = 'abs residual - q = [0.78 1.55] - 80% peak threshold'
+    # oldname = 'abs residual - q = [0.78 1.55] - 0.8% peak threshold'
+    # f[newname] = f[oldname]
+    # del f[oldname]
+    print(list(f.keys()))
+    # for attr in f[newname].attrs:
+    #     print(attr)
+```
+
+```{code-cell} ipython3
 # dataset = "rel residual - q = 1.55 - peak range"
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
-
-# with h5py.File(samplesfile, "a") as f:
-#     print(list(f.keys()))
-#     freq = f[dataset].attrs["frequency grid [eV]"]
-#     dset = f[dataset]
-#     for attr in dset.attrs:
-#         if attr != "random_state_1":
-#             print(f"{attr} : {dset.attrs[attr]}")
-# print(freq)
-# np.allclose(freq, freq_data)
 ```
 
 ```{code-cell} ipython3
@@ -389,13 +396,12 @@ corner.overplot_points(fig, mean[np.newaxis], marker="o", linestyle="--", color=
 ```{code-cell} ipython3
 # randomly pick 100 samples from our MCMC sampling data
 inds = rng.integers(len(flat_samples), size=100)
-x = np.geomspace(1e-1, 1e3, 200)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
     plt.plot(
-        x,
-        collisionfreq(x / AtomicUnits.energy, sample).real,
+        freq_grid,
+        collisionfreq(freq_grid / AtomicUnits.energy, sample).real,
         "grey",
         alpha=0.1
     )
@@ -408,7 +414,7 @@ for ind in inds:
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-# plt.ylim(-0.03, 0.6)
+plt.ylim(1e-3)
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
@@ -468,4 +474,35 @@ plt.xlim(0, 45)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
+```
+
+```{code-cell} ipython3
+inferred_params = flat_samples[20]
+powerlaw = [1e-3, 0.5, 1, 1.5, 3, 5, 10, 20, 40]
+fig, ax = plt.subplots(2, 1, figsize=(6,8), sharex=True)
+x = np.linspace(0.1, 60, 100)
+for p in powerlaw:
+    params = inferred_params
+    params[-1] = p
+    ax[0].plot(
+        x,
+        collisionfreq(x / AtomicUnits.energy, params).real,
+        label=f"p = {p}"
+    )
+    elf = elfmodel(x / AtomicUnits.energy, params)
+    ax[1].plot(
+        x,
+        elf[1], 
+    )
+ax[0].axvline(inferred_params[2] * AtomicUnits.energy, ls="--", color="black")
+ax[0].text(inferred_params[2] * AtomicUnits.energy - 4, 0.08, r"$\omega_0$")
+ax[1].axvline(inferred_params[2] * AtomicUnits.energy, ls="--", color="black")
+ax[0].set_ylabel("Collision freq. (au)")
+ax[1].set_ylabel("ELF (au)")
+ax[1].set_xlabel("frequency (eV)")
+ax[0].legend()
+```
+
+```{code-cell} ipython3
+
 ```
